fix(styles): add mobile overflow hidden

--- a/src/components/PageRoot/styles.module.scss
+++ b/src/components/PageRoot/styles.module.scss
@@ -9,5 +9,6 @@
     padding: 120px 16px;
     width: 100%;
     min-width: auto;
+    overflow: hidden;
   }
 }
